// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initHOST should fallback to localhost 2`] = `
{
  "internalIpV4Calls": [
    [],
  ],
  "logCalls": [
    [
      "debug",
      "🏭 - Initializing the HOST service.",
    ],
    [
      "warning",
      "🚫 - Could not detect any host. Fallbacking to "localhost".",
    ],
  ],
  "requireCalls": [
    [
      "internal-ip",
    ],
  ],
}
`;

exports[`initHOST should find a HOST by itself if no env HOST 2`] = `
{
  "internalIpV4Calls": [
    [],
  ],
  "logCalls": [
    [
      "debug",
      "🏭 - Initializing the HOST service.",
    ],
    [
      "warning",
      "✔ - Using detected host "192.168.1.10".",
    ],
  ],
  "requireCalls": [
    [
      "internal-ip",
    ],
  ],
}
`;

exports[`initHOST should use the env HOST first 2`] = `
{
  "internalIpV4Calls": [],
  "logCalls": [
    [
      "debug",
      "🏭 - Initializing the HOST service.",
    ],
    [
      "warning",
      "♻️ - Using ENV host "192.168.1.11"",
    ],
  ],
  "requireCalls": [],
}
`;
